--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -2,16 +2,20 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 
 $our-font: "Comic Sans MS", sans-serif;
-$color-primary: #a51c30;
+$color-primary: rgb(230, 227, 224);
 $imported-font: "Poppins", sans-serif;
 
+a{
+  text-decoration: none;
+}
+
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .my-class {
@@ -69,16 +73,16 @@ p {
     // height: 100%;
     position: relative;
     width: 75%;
-    
-    .mid-col-inner{
-        margin-bottom: 0;
-        height: calc(100% - 3rem);
-        
-        overflow-y: scroll;
+
+    .mid-col-inner {
+      margin-bottom: 0;
+      height: calc(100% - 3rem);
+
+      overflow-y: scroll;
     }
 
-    .mid-col-body{
-        font-size: 1rem;
+    .mid-col-body {
+      font-size: 1rem;
     }
   }
 
@@ -93,6 +97,56 @@ p {
       background-size: contain;
       height: 60px;
       width: 60px;
+    }
+  }
+}
+
+header {
+  background-color: $color-primary;
+  padding: 10px;
+  height: 108px;
+  .top-bar {
+    
+    .orcl-logo {
+      background-image: url("https://i.gyazo.com/41493426a776f170de892c1b5258f401.png");
+      height: 35px;
+      width: 200px;
+      background-size: cover;
+      display: inline-block;
+    }
+    span{
+      vertical-align: super;
+    }
+
+  }
+
+  .bottom-bar {
+    width: 100%;
+    position: relative;
+    background-color: red;
+    ul {
+      position: absolute;
+      right: 0;
+      li {
+        display: inline-block;
+        margin-left: 20px;
+      }
+    }
+  }
+}
+
+footer{
+  background-color: $color-primary;
+  width: 100%;
+  height: 37px;
+  // padding: 10px;
+
+  div {
+    background-color: $color-primary;
+    margin-left: 10px;
+    span {
+      color: #ae562c;
+      margin-right: 10px;
     }
   }
 }
