date for comment and post

--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -7,6 +7,13 @@ $imported-font: "Poppins", sans-serif;
 
 a{
   text-decoration: none;
+  color: black;
+}
+
+a:hover{
+  color: #333;
+  text-emphasis: none;
+  text-decoration: none;
 }
 
 * {
