avatar on post and newlines in body

--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -90,6 +90,12 @@ p {
 
     .mid-col-body {
       font-size: 1rem;
+      * {
+        display: block;
+      }
+       code {
+        white-space: pre-wrap;
+       }
     }
   }
 
