--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -55,7 +55,7 @@ p {
 
 .postcomp-outermost {
   width: 100%;
-  height: 250px;
+  // height: 250px;
   background-color: #efefef;
   margin-bottom: 2rem;
 
@@ -227,5 +227,13 @@ footer{
   #input_body {
       height: 200px;
   }
+}
 
+.comment-body{
+  * {
+    display: block;
+  }
+   code {
+    white-space: pre-wrap;
+   }
 }
