--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -139,10 +139,10 @@ header {
     background-color: red;
     ul {
       position: absolute;
-      right: 0;
+      left: 0;
       li {
         display: inline-block;
-        margin-left: 20px;
+        margin-right: 20px;
       }
     }
   }
