--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -237,3 +237,17 @@ footer{
     white-space: pre-wrap;
    }
 }
+
+// https://www.inserthtml.com/2012/02/css-tag-icons/
+.tag {
+  font-family: Helvetica, Arial, sans-serif;
+  background: #505358;
+  display: inline-block;
+  color: #fff;
+  position: relative;
+  padding: 5px;
+  border-top-left-radius: 4px;
+  // border-bottom-left-radius: 4px;
+  margin: 0 30px 0 0;
+  text-decoration: none;
+}
