--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -246,8 +246,7 @@ footer{
   color: #fff;
   position: relative;
   padding: 5px;
-  border-top-left-radius: 4px;
-  // border-bottom-left-radius: 4px;
-  margin: 0 30px 0 0;
+  border-radius: 4px;
+  margin: 0 10px 0 0;
   text-decoration: none;
 }
