API calls to orahub

--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -241,7 +241,7 @@ footer{
 // https://www.inserthtml.com/2012/02/css-tag-icons/
 .tag {
   font-family: Helvetica, Arial, sans-serif;
-  background: #505358;
+  background: #aaa;
   display: inline-block;
   color: #fff;
   position: relative;
